--- a/src/app/pages/classes/classes.page.html
+++ b/src/app/pages/classes/classes.page.html
@@ -1,12 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Classes</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<app-header title="Clases"/>
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
