--- a/src/app/pages/tutors/tutors.page.html
+++ b/src/app/pages/tutors/tutors.page.html
@@ -1,11 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Tutors</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="Tutores"/>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
