--- a/src/app/pages/students/student.page.html
+++ b/src/app/pages/students/student.page.html
@@ -1,4 +1,4 @@
-<app-header title="Students"/>
+<app-header title="Usuarios"/>
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
