--- a/src/app/pages/booking/booking.page.html
+++ b/src/app/pages/booking/booking.page.html
@@ -3,7 +3,8 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">reservations</ion-title>
+      <ion-title size="large">booking</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
+
