--- a/src/app/pages/students/student.page.html
+++ b/src/app/pages/students/student.page.html
@@ -1,8 +1,19 @@
-<app-header title="Usuarios"/>
+<app-header title="Usuarios" />
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">student</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-list>
+    @for (user of users; track user; let i = $index) {
+    <ion-item>
+      <ion-label>
+        {{user.first_name}} {{user.last_name}}
+        <p>{{user.email}}</p>
+      </ion-label>
+    </ion-item>
+    }
+  </ion-list>
 </ion-content>
