--- a/src/app/pages/students/student.page.html
+++ b/src/app/pages/students/student.page.html
@@ -8,12 +8,17 @@
 
   <ion-list>
     @for (user of users; track user; let i = $index) {
-    <ion-item>
-      <ion-label>
-        {{user.first_name}} {{user.last_name}}
-        <p>{{user.email}}</p>
-      </ion-label>
-    </ion-item>
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>
+          {{user.first_name}} {{user.last_name}}
+          <p>{{user.email}}</p>
+        </ion-label>
+      </ion-item>
+      <ion-item-options>
+        <ion-item-option>Detalle</ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
     }
   </ion-list>
 </ion-content>
