--- a/src/app/pages/booking/booking.page.html
+++ b/src/app/pages/booking/booking.page.html
@@ -1,4 +1,4 @@
-<app-header title="Reservaciones">
+<app-header title="Reservaciones" />
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
@@ -6,5 +6,16 @@
       <ion-title size="large">booking</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-list>
+    @for (booking of bookings; track booking; let i = $index) {
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label> {{booking.id}} </ion-label>
+      </ion-item>
+      <ion-item-options>
+        <ion-item-option>Detalle</ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+    }
+  </ion-list>
 </ion-content>
-
