add filter mas no results

--- a/src/app/pages/booking/booking.page.html
+++ b/src/app/pages/booking/booking.page.html
@@ -23,6 +23,8 @@
         <ion-item-option>Detalle</ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
+    } @empty {
+      <app-no-results />
     }
   </ion-list>
 </ion-content>
