--- a/src/app/pages/tutors/tutors.page.html
+++ b/src/app/pages/tutors/tutors.page.html
@@ -29,5 +29,8 @@
       </ion-item-options>
     </ion-item-sliding>
     }
+     @empty {
+      <app-no-results />
+    }
   </ion-list>
 </ion-content>
