--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,8 +1,46 @@
-<app-header title="Home"/>
+<app-header title="Home" />
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">home</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="12" size-md="4">
+        <ion-card color="primary" class="ion-text-center" href="/student">
+          <ion-card-header>
+            <ion-card-title>Usuarios</ion-card-title>
+          </ion-card-header>
+
+          <ion-card-content>
+           <ion-icon slot="start" name="people" ></ion-icon>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size="12" size-md="4">
+        <ion-card color="secondary" class="ion-text-center" href="/tutors">
+          <ion-card-header>
+            <ion-card-title>Tutores</ion-card-title>
+          </ion-card-header>
+
+          <ion-card-content>
+           <ion-icon slot="start" name="ribbon" ></ion-icon>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size="12" size-md="4">
+        <ion-card color="tertiary" class="ion-text-center" href="/booking">
+          <ion-card-header>
+            <ion-card-title>Reservaciones</ion-card-title>
+          </ion-card-header>
+
+          <ion-card-content>
+            <ion-icon slot="start" name="bookmark" ></ion-icon>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
