--- a/src/app/pages/students/student.page.html
+++ b/src/app/pages/students/student.page.html
@@ -5,15 +5,12 @@
       <ion-title size="large">student</ion-title>
     </ion-toolbar>
   </ion-header>
-
+  <ion-nav [root]="component"></ion-nav>
   <ion-list>
     @for (user of users; track user; let i = $index) {
     <ion-item-sliding>
-      <ion-item>
-        <ion-label>
-          {{user.first_name}} {{user.last_name}}
-          <p>{{user.email}}</p>
-        </ion-label>
+      <ion-item [href]="'student/detail/'+user.id">
+        <ion-label> {{user.first_name}} {{user.last_name}} </ion-label>
       </ion-item>
       <ion-item-options>
         <ion-item-option>Detalle</ion-item-option>
