--- a/src/app/pages/students/detail/detail.page.html
+++ b/src/app/pages/students/detail/detail.page.html
@@ -1,5 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="student">
+      </ion-back-button>
+    </ion-buttons>
     <ion-title>detail</ion-title>
   </ion-toolbar>
 </ion-header>
