--- a/src/app/pages/students/student.page.html
+++ b/src/app/pages/students/student.page.html
@@ -5,8 +5,15 @@
       <ion-title size="large">student</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-searchbar
+    [debounce]="500"
+    (ionInput)="handleInput($event.target.value)"
+    show-clear-button="focus"
+    placeholder="Buscar..."
+  ></ion-searchbar>
   <ion-list>
-    @for (user of users; track user; let i = $index) {
+    @for (user of users | userFilter: query; track user; let i = $index) {
     <ion-item-sliding>
       <ion-item id="open-modal" button (click)="setOpen(true, user.id)">
         <ion-label> {{user.first_name}} {{user.last_name}} </ion-label>
@@ -15,6 +22,9 @@
         <ion-item-option>Detalle</ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
+    }
+    @empty {
+      <app-no-results />
     }
   </ion-list>
 
